{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 47,
  "lineage": "c62960b3-6c5f-a72b-e49d-0dd2657ee69b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:loadbalancer/app/my-uber-clone-infra-alb/32758937e63f573a",
            "arn_suffix": "app/my-uber-clone-infra-alb/32758937e63f573a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-uber-clone-infra-alb-553445953.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:loadbalancer/app/my-uber-clone-infra-alb/32758937e63f573a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-uber-clone-infra-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0d5434a74eeb6ab3f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c0db43c768d0500"
              },
              {
                "subnet_id": "subnet-0d138cd6f0627598d"
              }
            ],
            "subnets": [
              "subnet-05c0db43c768d0500",
              "subnet-0d138cd6f0627598d"
            ],
            "tags": {
              "Name": "my-uber-clone-infra-alb"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-alb"
            },
            "vpc_id": "vpc-0a26e2047cb5d18c8",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:loadbalancer/app/my-uber-clone-infra-alb/32758937e63f573a"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:listener/app/my-uber-clone-infra-alb/32758937e63f573a/3d001878b19a6c39",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:targetgroup/my-uber-clone-infra-tg/faf630bf473fbadb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:listener/app/my-uber-clone-infra-alb/32758937e63f573a/3d001878b19a6c39",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:loadbalancer/app/my-uber-clone-infra-alb/32758937e63f573a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:listener/app/my-uber-clone-infra-alb/32758937e63f573a/3d001878b19a6c39"
          },
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:targetgroup/my-uber-clone-infra-tg/faf630bf473fbadb",
            "arn_suffix": "targetgroup/my-uber-clone-infra-tg/faf630bf473fbadb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:targetgroup/my-uber-clone-infra-tg/faf630bf473fbadb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:972842348898:loadbalancer/app/my-uber-clone-infra-alb/32758937e63f573a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-uber-clone-infra-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-uber-clone-infra-tg"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:972842348898:targetgroup/my-uber-clone-infra-tg/faf630bf473fbadb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:security-group/sg-0d5434a74eeb6ab3f",
            "description": "Allow HTTP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5434a74eeb6ab3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-uber-clone-infra-alb-sg",
            "name_prefix": "",
            "owner_id": "972842348898",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-uber-clone-infra-alb-sg"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "sg-0d5434a74eeb6ab3f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:security-group/sg-05dca164e5233d852",
            "description": "Allow HTTP from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dca164e5233d852",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to talk to app",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5434a74eeb6ab3f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-uber-clone-infra-app-sg",
            "name_prefix": "",
            "owner_id": "972842348898",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-uber-clone-infra-app-sg"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "sg-05dca164e5233d852",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:security-group/sg-023195cfb220e2a4d",
            "description": "Allow MySQL from app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023195cfb220e2a4d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow app to access DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05dca164e5233d852"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-uber-clone-infra-rds-sg",
            "name_prefix": "",
            "owner_id": "972842348898",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-uber-clone-infra-rds-sg"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "sg-023195cfb220e2a4d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07efd2c78c98b9b5b",
            "arn": "arn:aws:ec2:ap-south-1:972842348898:elastic-ip/eipalloc-07efd2c78c98b9b5b",
            "association_id": "eipassoc-01df78efe8eaea7eb",
            "domain": "vpc",
            "id": "eipalloc-07efd2c78c98b9b5b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-058269f88aa74630a",
            "private_dns": "ip-10-0-0-146.ap-south-1.compute.internal",
            "private_ip": "10.0.0.146",
            "public_dns": "ec2-43-204-122-218.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.122.218",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-uber-clone-infra-nat-eip-ap-south-1a"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-nat-eip-ap-south-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088825bc39c073ab3",
            "arn": "arn:aws:ec2:ap-south-1:972842348898:elastic-ip/eipalloc-088825bc39c073ab3",
            "association_id": "eipassoc-014bf729cac49d977",
            "domain": "vpc",
            "id": "eipalloc-088825bc39c073ab3",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-047d16318a56be519",
            "private_dns": "ip-10-0-1-198.ap-south-1.compute.internal",
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-3-111-72-235.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.72.235",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-uber-clone-infra-nat-eip-ap-south-1b"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-nat-eip-ap-south-1b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:internet-gateway/igw-05b4197cfb9767c99",
            "id": "igw-05b4197cfb9767c99",
            "owner_id": "972842348898",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-uber-clone-infra-igw"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-igw"
            },
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07efd2c78c98b9b5b",
            "association_id": "eipassoc-01df78efe8eaea7eb",
            "connectivity_type": "public",
            "id": "nat-06e3d1f43030d102b",
            "network_interface_id": "eni-058269f88aa74630a",
            "private_ip": "10.0.0.146",
            "public_ip": "43.204.122.218",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d138cd6f0627598d",
            "tags": {
              "Name": "my-uber-clone-infra-nat-ap-south-1a"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-nat-ap-south-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088825bc39c073ab3",
            "association_id": "eipassoc-014bf729cac49d977",
            "connectivity_type": "public",
            "id": "nat-03e41e3153a5495fd",
            "network_interface_id": "eni-047d16318a56be519",
            "private_ip": "10.0.1.198",
            "public_ip": "3.111.72.235",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05c0db43c768d0500",
            "tags": {
              "Name": "my-uber-clone-infra-nat-ap-south-1b"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-nat-ap-south-1b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:route-table/rtb-0f7c67577d714f428",
            "id": "rtb-0f7c67577d714f428",
            "owner_id": "972842348898",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e3d1f43030d102b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-uber-clone-infra-private-rt-ap-south-1a"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-private-rt-ap-south-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "rtb-0f7c67577d714f428",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:route-table/rtb-0ea521c740d153de2",
            "id": "rtb-0ea521c740d153de2",
            "owner_id": "972842348898",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03e41e3153a5495fd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-uber-clone-infra-private-rt-ap-south-1b"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-private-rt-ap-south-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "rtb-0ea521c740d153de2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:route-table/rtb-0b086d191611605da",
            "id": "rtb-0b086d191611605da",
            "owner_id": "972842348898",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b4197cfb9767c99",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-uber-clone-infra-public-rt"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "rtb-0b086d191611605da",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd00f522c80c4e5e",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f7c67577d714f428",
            "subnet_id": "subnet-04a573f5504a546a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6294328c3b20539",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ea521c740d153de2",
            "subnet_id": "subnet-0183d72bea71c994d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0242e125e77f30695",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b086d191611605da",
            "subnet_id": "subnet-0d138cd6f0627598d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f1ff65b2c6030e3",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b086d191611605da",
            "subnet_id": "subnet-05c0db43c768d0500"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:subnet/subnet-04a573f5504a546a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a573f5504a546a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972842348898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-uber-clone-infra-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-private-ap-south-1a"
            },
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "subnet-04a573f5504a546a7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:subnet/subnet-0183d72bea71c994d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0183d72bea71c994d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972842348898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-uber-clone-infra-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-private-ap-south-1b"
            },
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "subnet-0183d72bea71c994d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:subnet/subnet-0d138cd6f0627598d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d138cd6f0627598d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "972842348898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-uber-clone-infra-public-ap-south-1a"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-public-ap-south-1a"
            },
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "subnet-0d138cd6f0627598d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:subnet/subnet-05c0db43c768d0500",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c0db43c768d0500",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "972842348898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-uber-clone-infra-public-ap-south-1b"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-public-ap-south-1b"
            },
            "vpc_id": "vpc-0a26e2047cb5d18c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "subnet-05c0db43c768d0500",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:972842348898:vpc/vpc-0a26e2047cb5d18c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef738cf823ffded3",
            "default_route_table_id": "rtb-01da8764ebeb82a12",
            "default_security_group_id": "sg-0162b5e0c341dd219",
            "dhcp_options_id": "dopt-0b277ebaeb90d14c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a26e2047cb5d18c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01da8764ebeb82a12",
            "owner_id": "972842348898",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-uber-clone-infra-vpc"
            },
            "tags_all": {
              "Name": "my-uber-clone-infra-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972842348898",
            "id": "vpc-0a26e2047cb5d18c8",
            "region": "ap-south-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}